fix(header): navbar gap fixed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,7 +11,7 @@ nav {
 }
 
 nav div {
-    width: 52%;
+    width: 50%;
     display: flex;
     gap: 9.5%;
 }
